--- a/现有产品调研.md
+++ b/现有产品调研.md
@@ -2,14 +2,21 @@
 本推理引擎打算支持 Transformer 模型中 Qwen 系列、Llama 系列，以及 Deepseek R1 的大语言推理服务。
 
 ## 现有推理引擎
-[TensorRT](https://github.com/NVIDIA/TensorRT)、[DeepSpeed Inference](https://github.com/deepspeedai/DeepSpeed?tab=readme-ov-file)、[TensorRT-LLM](https://github.com/NVIDIA/TensorRT-LLM/tree/release/0.5.0)、[Triton Inference Server](https://github.com/triton-inference-server/server)、[llama.cpp](https://github.com/ggml-org/llama.cpp)、[vllm](https://github.com/vllm-project/vllm)、[ktransformers](https://github.com/kvcache-ai/ktransformers/blob/main/README_ZH.md)、[huggingface-TGI](https://github.com/huggingface/text-generation-inference)、[sglang](https://github.com/sgl-project/sglang)
+[DeepSpeed Mii](https://github.com/deepspeedai/DeepSpeed-MII)、[llama.cpp](https://github.com/ggml-org/llama.cpp)、[vllm](https://github.com/vllm-project/vllm)、[ktransformers](https://github.com/kvcache-ai/ktransformers/blob/main/README_ZH.md)、[huggingface-TGI](https://github.com/huggingface/text-generation-inference)、[SGLang](https://github.com/sgl-project/sglang)、[LMDeploy](https://github.com/InternLM/lmdeploy)
 
 
 ## 技术调研
-量化技术、并行计算、内存管理、平台适配、多节点
+量化技术、并行计算、内存管理、平台适配、多节点、推理技术
 
 ## 调研结果
-
+||量化技术|并行计算|内存管理|平台适配|多节点|推理技术|
+|----|----|----|----|----|----|----|
+|llama.cpp|T|可按照 layer、row 切分|offload|AMD、NVIDIA、NPU、MUSA|F||
+|vllm|T|TP、PP 均分|Paged Attention、offload|AMD、NVIDIA、TPU|T|Chunked prefill、prefix caching|
+|LMDeploy|T|TP|blocked KV cache|NVIDIA|T|prefix caching|
+|SGLang|T|TP|paged attention|AMD、NVIDIA|T|chunked prefill|
+|DeepSpeed Mii|F|TP|blocked KV cache|NVIDIA|F||
+|huggingface-TGI|T|TP| Paged Attention|AMD、NVIDIA|F|Speculative decoding|
 
 
 
