rethink the structure

--- a/开发日记.md
+++ b/开发日记.md
@@ -2,3 +2,39 @@
 今天只是初步的搞了一个超级简单的框架，也不知道之后是不是就按照这个流程搞了，或者有可能根本就用不了。
 
 脚手架还是非常重要的，先搭起来吧。如果未来失败了，再反思成长好了。
+
+# 5.8
+really really 不想干活，注意力被四处吸引。我重新思考了一下，可能暂时不需要 ParamLoader 这个类。
+
+功能先放在 Layer 好了，创建 ParamLoader 是想要职责分离，但是对 parameter 进行操作还要设计 device 分配之类乱七八糟的东西。
+
+先统一到 Layer 里，之后再重构好了。重新思考了下架构，layer 和 communicator 之间的关系理清了，这是一个重大突破。
+
+* 推理引擎主体（Engine）：
+    * 初始化和资源分配
+    * Engine 将需要处理的数据通过 Scheduler 分发给 Worker
+    * 
+
+* 任务调度模块（Scheduler）
+    * 接收Engine提交的推理任务，维护任务队列
+
+* 具体推执行单元（Worker）
+    * 接收来自 Scheduler 的任务
+    * 调用 Layer 进行模型的前向推理运算
+    * 设备计算上下文控制能力
+
+
+* 设备管理模块（Device Manager）
+* 计算设备抽象（Device）
+    * 使用 Allocator 管理内存
+    * 将计算任务通过 Function 执行，实际执行 Device 上的计算核函数
+    
+* 模型层次模块（Layer）
+    * Layer 不直接使用 Communicator，而是暴露接口或声明自己的通信需求。
+
+* 通信管理模块（Communicator）
+    * 执行跨设备的数据通信操作（AllReduce等）
+    * 管理通信上下文与句柄
+
+* 模型加载与配置模块（Model Loader）
+
