update the development diary

--- a/开发日记.md
+++ b/开发日记.md
@@ -8,12 +8,15 @@ really really 不想干活，注意力被四处吸引。我重新思考了一下
 
 功能先放在 Layer 好了，创建 ParamLoader 是想要职责分离，但是对 parameter 进行操作还要设计 device 分配之类乱七八糟的东西。
 
-先统一到 Layer 里，之后再重构好了。重新思考了下架构，layer 和 communicator 之间的关系理清了，这是一个重大突破。
+先统一到 Layer 里，之后再重构好了。重新思考了下架构，**layer 和 communicator 之间的关系理清了**，这是一个重大突破。
+
+思考了一下，这种严格先搭架子后填肉的工作方式，不太适合现在的我。因为我没有实现经验，搭架子就很耗费时间，想办法做验证也是十分不合算。
+
+所以我打算在有整体的构思下，边搭架子，边填肉。整体构思如下：
 
 * 推理引擎主体（Engine）：
     * 初始化和资源分配
     * Engine 将需要处理的数据通过 Scheduler 分发给 Worker
-    * 
 
 * 任务调度模块（Scheduler）
     * 接收Engine提交的推理任务，维护任务队列
