--- a/开发日记.md
+++ b/开发日记.md
@@ -41,3 +41,13 @@ really really 不想干活，注意力被四处吸引。我重新思考了一下
 
 * 模型加载与配置模块（Model Loader）
 
+# 5.9
+不想干活不想干活不想干活不想干活
+
+吸 ~ 呼 ~ 冷静，今天先把 Device 类设计好，**设备种类**在 Device 处做好多态，**数据格式**在 Function 处做多态。
+
+Function 函数这里有个问题就是，KV Cache 最好做成分页式的，这样就不用一次全部分页了。*我需要调研一下这个机制是怎么实现的*
+
+调研这件事先留在明天吧，一次干太多事容易把心态搞崩。刚刚突然有个想法，**可以把decoder层整个融合到一个函数里，或者把attention和ffn前面的norm融合到一起，测一测效果。**
+
+下午被抓去干活了，这边已经不记得干到哪里了。。。等明天来整理思路吧......
