--- a/产品开发.md
+++ b/产品开发.md
@@ -125,49 +125,116 @@
 这个流程是一个理想化的模型，实际项目中可能会根据具体情况进行调整和裁剪。对于小型个人项目，某些步骤可能会简化，但核心思想是相通的。祝你的C++项目顺利！
 
 
-# Worker、Layer以及Function的设计
+# Function的设计
+函数是无状态的，并且函数的种类组合数量会非常庞大（硬件类型 x 数据精度 x 操作类型）。采用**注册表模式 (Registry Pattern)** 来管理所有的函数。
 
-在我们的推理引擎中， Worker 、 Layer 和 Function 是核心的计算执行单元。为了实现高效、可扩展且硬件无关的推理能力，我们采用了分层和依赖抽象的设计原则。
+函数由 `\include\function.h` 里面定义的函数指针，由对应的 Layer 来使用对应种类的函数。同一操作类型的函数接口是相同的，所以由 Worker 根据配置文件获取对应硬件类型、数据精度的函数，赋给 Layer 的函数指针。
+```
+// function.h
 
-核心设计理念：
-- Worker 驱动执行与资源管理： Worker 负责管理一个特定的计算设备（如一个 GPU 卡）。它根据 Engine 的调度指令，获取相应的 Layer ，并为其配备合适的 Function 实例来执行计算。 Worker 还负责管理设备的内存（通过 MemAllocator ）和 KV 缓存（通过 KVCacheManager ）。
-- Layer 依赖于抽象，而非具体实现： Layer及其子类定义了神经网络中各种标准操作（如线性变换层、注意力层、归一化层等）的接口。它不关心这些操作在具体硬件上如何执行，也不关心使用的数据类型。
-- Function 作为具体实现的载体： Function 是 Layer 调用接口的具体实现。针对不同的硬件架构（如 CPU、CUDA GPU、国产 NPU 等）和不同的数据精度（如 FP32、FP16、BF16、INT8 等），会有不同的 Function 实现。
-
-动态注册与选择机制 (Registry Pattern)：
-
-考虑到 Function 的实现组合数量可能非常庞大（硬件类型 x 数据精度 x 操作类型），我们采用了一种灵活且动态的 注册表模式 (Registry Pattern) 来管理这些实现。
+using LinearFuncPtr = void (*)(void *y, void *X, void *W, int W_in, int W_out, int num);
+```
 
 核心思想：
+### 函数注册表（FuncRegistry）
+在`\include\registry.h`内，FuncRegistry 是一个模板类，由模板提供运算的种类，由下面的全局注册表（OpRegistry）声明，在编译阶段完成。FuncRegistry内部有个 `std::map<std::tuple<int, int>, FuncPtrT> registry_map_;` 当对应种类的函数注册到对应种类的 FuncRegistry 后，通过 `FuncPtrT Get(int device, int dtype)` 获取对应的 device、dtype 的函数指针。
+```
+template <typename FuncPtrT>
+class FuncRegistry {
+public:
+    void Register(int device, int dtype, FuncPtrT ptr) {
+        registry_map_[std::make_tuple(device, dtype)] = ptr;
+    }
 
-1. 全局注册表 ( OpRegistry )： 我们在`registry.h`创建了一个全局的单例注册表管理器，名为 OpRegistry 。这个管理器内部为每一种操作类型（如 Linear 、 Attention 、 RMSNorm 、 Add 等）维护一个专门的函数指针注册表 ( FuncRegistry )。
-   
-   - FuncRegistry 是一个模板类，它使用 std::map 将一个由 (设备类型, 数据类型) 组成的元组映射到一个具体的函数指针。
-   - OpRegistry 提供了访问特定操作类型注册表的接口，例如 OpRegistry::Instance().Linear() 返回 Linear 操作的 FuncRegistry 实例。
+    FuncPtrT Get(int device, int dtype) const {
+        auto it = registry_map_.find(std::make_tuple(device, dtype));
+        if (it != registry_map_.end()) {
+            return it->second;
+        }
+        
+        throw std::runtime_error("Function implementation not found for device/dtype combination.");
+        return nullptr;
+    }
 
-2. Function 实现的自动注册： 每个具体的 Function 实现（例如，在 `linear_cuda.cu` 中实现的 cuda_fp32_linear_exec 函数）在程序启动时，通过一个宏 REGISTER_OP_FUNCTION 将自己注册到 OpRegistry 中。
-   
-   - REGISTER_OP_FUNCTION(OP_NAME, DEVICE, DTYPE, FUNC_PTR) 宏会自动创建一个静态的注册器实例。这个注册器在构造时，会调用 OpRegistry::Instance().OP_NAME().Register(DEVICE, DTYPE, FUNC_PTR) ，将函数指针 FUNC_PTR 与指定的操作名 OP_NAME 、设备类型 DEVICE （如 CUDA ）和数据类型 DTYPE （如 FLOAT32 ）关联起来。
-   - 例如，在 `linear_cuda.cu` 中的 REGISTER_OP_FUNCTION(Linear, CUDA, FLOAT32, cuda_fp32_linear_exec); 会将 cuda_fp32_linear_exec 函数注册为在 CUDA 设备上处理 FP32 数据的 Linear 操作的实现。
+private:
+    std::map<std::tuple<int, int>, FuncPtrT> registry_map_;
+};
+```
 
-3. Layer 动态获取 Function 实例： 当 Layer 需要执行一个操作时，它会向 Worker 请求一个合适的 Function 实例。 Worker （或其辅助的工厂类）会根据当前的设备类型和期望的数据精度，查询 OpRegistry 来获取对应的函数指针。
-   
-   - FuncRegistry::Get(device, dtype) 方法用于根据设备和数据类型查找已注册的函数指针。如果找不到匹配的实现，它会抛出一个运行时错误。
+### 全局注册表 ( OpRegistry )
+在 `\include\registry.h` 创建了一个全局的单例注册表管理器，名为 `OpRegistry` 。这个管理器内部为每一种操作类型（如 Linear 、 Attention 、 RMSNorm 、 Add 等）维护一个专门的函数指针注册表 ( FuncRegistry )。
+```
+class OpRegistry {
+public:
+    static OpRegistry& Instance() {
+        static OpRegistry instance;
+        return instance;
+    }
+    
+    // 禁止拷贝和赋值
+    OpRegistry(const OpRegistry&) = delete;
+    OpRegistry& operator=(const OpRegistry&) = delete;
 
+    // 提供对特定类型函数指针注册表的访问
+    FuncRegistry<LinearFuncPtr>& Linear() { return linear_registry_; }
+    // FuncRegistry<AttentionFuncPtr>& Attention() { return attention_registry_; }
+    // FuncRegistry<RMSNormFuncPtr>& RMSNorm() { return rmsnorm_registry_; }
+    // ...
 
-优点：
-1. 高度的可扩展性 (遵循开放/封闭原则)：
-   - 支持新硬件/新精度简单： 要为某个操作添加对新硬件或新数据精度的支持，开发者只需要：
-     1. 创建一个新的源文件（例如 linear_cpu_fp16.cpp ）。
-     2. 在该文件中实现具体的 Function （例如 cpu_fp16_linear_exec ）。
-     3. 使用 REGISTER_OP_FUNCTION 宏将这个新实现注册到系统中。
-        例如： REGISTER_OP_FUNCTION(Linear, CPU, FLOAT16, cpu_fp16_linear_exec);
-   - 无需修改核心代码： 添加新的 Function 实现完全不需要修改 Layer 、 Worker 或 OpRegistry 的现有代码。这使得引擎核心保持稳定，同时易于扩展。
+private:
+    OpRegistry() = default;
 
-2. 代码清晰与解耦：
-   - 职责分离： Layer 定义“做什么”， Function 实现“怎么做”， Registry 负责“找到谁来做”。创建逻辑（选择 Function ）与 Function 的具体实现逻辑完全分离。
-   - Worker 和 Layer 的简化： Worker 和 Layer 不需要知道所有具体的 Function 实现类名或包含复杂的 if/else 或 switch 语句来选择实现。它们只需要与抽象的 Function 接口和 Registry 交互。
+    FuncRegistry<LinearFuncPtr> linear_registry_;
+    // FuncRegistry<AttentionFuncPtr> attention_registry_;
+    // FuncRegistry<RMSNormFuncPtr> rmsnorm_registry_;
+    // ...
+};
+```
 
-3. 易于维护和测试：
-   - 每个 Function 实现都封装在自己的文件中，便于独立开发、测试和维护。
-   - 可以针对特定的设备和数据类型组合进行单元测试。
+Worker 通过下面的方式从注册表内得到特定种类、设备、数据类型的计算函数。
+```
+LinearFuncPtr linear_func = OpRegistry::Instance().Linear().Get(CUDA, FLOAT32);
+std::unique_ptr<Layer> linear_layer = std::make_unique<Linear>(linear_func);
+```
+### 自动注册
+所有的函数都在 `src/ops/xxxx/xxxx_device.*` 实现。xxxx 代表某一种类的函数文件夹，文件夹下是各种不同的设备对这个函数的支持。
+```
+./ops/
+├── attention
+│   └── attention_cpu.cpp
+└── linear
+    ├── linear_cpu.cpp
+    └── linear_cuda.cu
+```
+在 `\include\registry.h` 有一个宏，用于我们实现一个函数后，完成自动注册。
+```
+#define REGISTER_OP_FUNCTION(OP_NAME, DEVICE, DTYPE, FUNC_PTR) \
+    namespace { \
+        struct Registrar_##OP_NAME##_##DEVICE##_##DTYPE { \
+            Registrar_##OP_NAME##_##DEVICE##_##DTYPE() { \
+                OpRegistry::Instance().OP_NAME().Register(DEVICE, DTYPE, FUNC_PTR); \
+            } \
+        }; \
+        static Registrar_##OP_NAME##_##DEVICE##_##DTYPE registrar_instance; \
+    }
+
+```
+在 `src/ops/xxxx/xxxx_device.*` 内，每完成一个函数便进行一次注册。
+```
+void cpu_fp32_linear_exec(void *y, void *X, void *W, int W_in, int W_out, int num)
+{
+    // 缩放因子
+    float alpha = 1.0;
+    float beta = 0.0;  // C 的初始权重
+    // 调用 OpenBLAS 的 SGEMM 函数
+    cblas_sgemm(CblasColMajor, CblasTrans, CblasNoTrans,
+                (float *)W_out, num, (float *)W_in,          // 矩阵维度
+                alpha,
+                (float *)W, W_in,                            // 矩阵 W 和列主布局步长
+                (float *)X, W_in,                            // 矩阵 X 和列主布局步长
+                beta,            // beta
+                (float *)y, (float *)W_out);                 // 结果矩阵 C 和列主布局步长
+}
+
+REGISTER_OP_FUNCTION(Linear, CPU, FLOAT32, cpu_fp32_linear_exec);
+```
