finetune infer process

--- a/产品开发.md
+++ b/产品开发.md
@@ -124,7 +124,37 @@
 
 这个流程是一个理想化的模型，实际项目中可能会根据具体情况进行调整和裁剪。对于小型个人项目，某些步骤可能会简化，但核心思想是相通的。祝你的C++项目顺利！
 
+# Engine 与 Worker 交互
+当前 Engine 可以向 Worker 发布以下命令：
+* INIT：worker 准备好设备环境，准备好模型、模型加载参数
+* INFER：worker 进行推理
+* SHUTDONW：worker 释放自己的资源
 
+Engine 使用 `promise` 和 `future` 来向 Worker 发布命令以及等待 Worker 传回处理完毕的信息。使用示例如下
+```
+#include <iostream>
+#include <future>
+
+void asyncFunction(std::promise<int>&& promiseObj) {
+    // 模拟一些计算
+    int result = 10;
+    promiseObj.set_value(result); // 设置结果
+}
+
+int main() {
+    std::promise<int> myPromise; // 创建一个promise对象
+    std::future<int> futureObj = myPromise.get_future(); // 获取future对象
+
+    std::thread t(asyncFunction, std::move(myPromise)); // 启动新线程执行异步函数
+
+    // 等待异步操作完成并获取结果
+    int value = futureObj.get();
+    std::cout << "Result: " << value << std::endl;
+
+    t.join(); // 确保线程已经结束
+    return 0;
+}
+```
 # Function的设计
 函数是无状态的，并且函数的种类组合数量会非常庞大（硬件类型 x 数据精度 x 操作类型）。采用**注册表模式 (Registry Pattern)** 来管理所有的函数。
 
